--- a/classmate-keeper/src/main/resources/application.properties
+++ b/classmate-keeper/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=classmate-keeper
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/profile
+spring.datasource.username=profile
+spring.datasource.password=profile
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
